[package]
name = "tree-logger"
version = "0.3.0"
edition = "2024"
description = "Simple yet feature-full logging and profile tool"
readme = "CARGO_README.md"
repository = "https://github.com/loremdipso/tree-logger"
license = "MIT"
keywords = ["logging"]

[dependencies]
ansi_term = "0.12.1"
colored = "2.1.0"
log = { version = "0.4.22", features = [
  "kv",
  "max_level_trace",
  "release_max_level_trace",
  "std",
] }
rustc-hash = "2.1.0"
strip-ansi-escapes = "0.2.0"
termsize = "0.1.9"
